# passrat

./: .gitignore  Cargo.toml  old-vault.db
src/: app.rs  db.rs  forms.rs  helpers.rs  inputs.rs  main.rs  models.rs  ui.rs
