[package]
name = "passrat"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
chrono = { version = "0.4.45", features = ["serde"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
ordinal = "0.4.0"
ratatui = "0.30.2"
rusqlite = { version = "0.39.0", features = ["bundled-sqlcipher"] }
serde = { version = "1.0.229", features = ["derive"] }
xdg = "3.0.0"
